# GalenaEngine

./: .gitignore  AchievementManager.cpp  AchievementManager.h  AchievementManager.hpp  CMakeLists.txt  Command.h  Component.h  EventManager.cpp  EventManager.h  Events.hpp  Font.cpp  Font.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  InputManager.hpp  Main.cpp  Minigin.cpp  Minigin.h  README.md  Renderable.h  Renderer.cpp  Renderer.h  Renderer.hpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h  Utils.hpp  sdbm.hpp
Commands/: CallbackCommand.cpp  CallbackCommand.h  GameObjectCommand.cpp  GameObjectCommand.h  GameObjectCommand.hpp  MoveCommand.cpp  MoveCommand.h  MoveCommand.hpp
Components/: Animation.cpp  Animation.h  Animation.hpp  CacheComponent.cpp  CacheComponent.h  CacheComponent.hpp  FpsComponent.cpp  FpsComponent.h  FpsComponent.hpp  HealthComponent.cpp  HealthComponent.h  HealthComponent.hpp  PlayerController.cpp  PlayerController.h  PlayerController.hpp  RotatorComponent.cpp  RotatorComponent.h  ScoreComponent.cpp  ScoreComponent.h  ScoreComponent.hpp  Sprite.cpp  Sprite.h  Sprite.hpp  TextComponent.cpp  TextComponent.h  UIComponent.cpp  UIComponent.h  UIComponent.hpp
Include/: Command.hpp  Component.hpp  EventManager.hpp  Events.hpp  Font.hpp  Galena.hpp  GameObject.hpp  InputManager.hpp  Locator.hpp  Renderable.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  ServiceLocator.hpp  Singleton.hpp  Texture2D.hpp  Time.hpp  Transform.hpp  Utils.hpp
Include/Commands/: CallbackCommand.hpp  GameObjectCommand.hpp  VolumeCommand.hpp
Include/Components/: Animation.hpp  Collider.hpp  CollisionRect.hpp  FpsComponent.hpp  RotatorComponent.hpp  Sprite.hpp  TextComponent.hpp  Timer.hpp  UIComponent.hpp
Include/Services/: EventManager.hpp  ISound.hpp  InputManager.hpp  Renderer.hpp  ResourceManager.hpp  SceneManager.hpp  Sound.hpp  SoundNull.hpp  SoundService.hpp  Sound_Mixer.hpp
Source/: EventManager.cpp  Font.cpp  Galena.cpp  GameObject.cpp  InputManager.cpp  Minigin.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  Texture2D.cpp  Time.cpp  Transform.cpp
Source/Commands/: CallbackCommand.cpp  GameObjectCommand.cpp  VolumeCommand.cpp
Source/Components/: Animation.cpp  Collider.cpp  CollisionRect.cpp  FpsComponent.cpp  RotatorComponent.cpp  Sprite.cpp  TextComponent.cpp  Timer.cpp  UIComponent.cpp
Source/Services/: EventManager.cpp  InputManager.cpp  Renderer.cpp  ResourceManager.cpp  SceneManager.cpp  Sound.cpp  SoundService.cpp  Sound_Mixer.cpp  Sound_MixerImpl.cpp
cmake/: EmscriptenToolchain.cmake
cmake/emscripten/: FindFreetype.cmake
